adding navbar section with navbar menu into header section

--- a/index.html
+++ b/index.html
@@ -29,8 +29,79 @@
   </head>
   <body>
     <!-- section::header  -->
-    <header>
-      <h1 class=""><i class="fa-regular fa-user"></i> Welcome to Peddy</h1>
+    <header class="w-4/5 mx-auto">
+      <!-- sub-section:: navbar -->
+      <nav class="navbar mt-[3.125rem]">
+        <div class="navbar-start">
+          <div class="dropdown">
+            <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="h-5 w-5"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M4 6h16M4 12h8m-8 6h16"
+                />
+              </svg>
+            </div>
+            <ul
+              tabindex="0"
+              class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow"
+            >
+              <li>
+                <a href=""> Home </a>
+              </li>
+              <li>
+                <a href=""> Shop </a>
+              </li>
+              <li>
+                <a href=""> Contact </a>
+              </li>
+            </ul>
+          </div>
+          <a
+            href=""
+            class="inline-flex gap-[0.6rem] justify-center items-center"
+          >
+            <img
+              src="./asset/images/logo.webp"
+              class="w-[1.5rem] h-[1.2rem]"
+              alt="logo"
+            />
+            <span class="text-[1.65rem] text-[#131313] font-black"
+              >Peddy</span
+            ></a
+          >
+        </div>
+        <div class="navbar-center hidden lg:flex">
+          <ul class="menu menu-horizontal px-1">
+            <li>
+              <a href="" class="text-[0.825rem] text-[#131313]"> Home </a>
+            </li>
+            <li>
+              <a href="" class="text-[0.825rem] text-[#131313]"> Shop </a>
+            </li>
+            <li>
+              <a href="" class="text-[0.825rem] text-[#131313]"> Contact </a>
+            </li>
+          </ul>
+        </div>
+        <div class="navbar-end">
+          <div class="avatar avatar-placeholder">
+            <div
+              class="w-[2.9rem] bg-white border border-[#0E7A81B3] rounded-full cursor-pointer"
+            >
+              <i class="fa-regular fa-user text-[#131313B3] text-[1.2rem]"></i>
+            </div>
+          </div>
+        </div>
+      </nav>
     </header>
 
     <!-- section:: main  -->
