--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
     <header class="w-4/5 mx-auto">
       <!-- sub-section:: navbar -->
       <nav class="navbar mt-[3.125rem]">
-        <div class="navbar-start">
-          <div class="dropdown">
+        <div
+          class="navbar-start justify-between lg:justify-start w-full md:w-9/12 lg:w-1/2"
+        >
+          <div class="dropdown mr-5 md:mr-2.5 lg:mr-0">
             <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -55,49 +57,54 @@
               class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow"
             >
               <li>
-                <a href=""> Home </a>
+                <a href="" class="text-base text-[#131313]"> Home </a>
               </li>
               <li>
-                <a href=""> Shop </a>
+                <a href="" class="text-base text-[#131313]"> Shop </a>
               </li>
               <li>
-                <a href=""> Contact </a>
+                <a href="" class="text-base text-[#131313]"> Contact </a>
               </li>
             </ul>
           </div>
           <a
             href=""
-            class="inline-flex gap-[0.6rem] justify-center items-center"
+            class="inline-flex gap-[0.4rem] lg:gap-[0.6rem] justify-center items-center"
           >
             <img
               src="./asset/images/logo.webp"
-              class="w-[1.5rem] h-[1.2rem]"
+              class="w-[1.2rem] h-[1rem] lg:w-[1.5rem] lg:h-[1.2rem] object-cover"
               alt="logo"
             />
-            <span class="text-[1.65rem] text-[#131313] font-black"
+            <span
+              class="text-[1.15rem] md:text-[1.25rem] lg:text-[1.65rem] text-[#131313] font-black"
               >Peddy</span
             ></a
           >
         </div>
         <div class="navbar-center hidden lg:flex">
-          <ul class="menu menu-horizontal px-1">
+          <ul class="menu menu-horizontal px-1 gap-[1.65rem]">
             <li>
-              <a href="" class="text-[0.825rem] text-[#131313]"> Home </a>
+              <a href="" class="text-base 2xl:text-lg text-[#131313]"> Home </a>
             </li>
             <li>
-              <a href="" class="text-[0.825rem] text-[#131313]"> Shop </a>
+              <a href="" class="text-base 2xl:text-lg text-[#131313]"> Shop </a>
             </li>
             <li>
-              <a href="" class="text-[0.825rem] text-[#131313]"> Contact </a>
+              <a href="" class="text-base 2xl:text-lg text-[#131313]">
+                Contact
+              </a>
             </li>
           </ul>
         </div>
         <div class="navbar-end">
           <div class="avatar avatar-placeholder">
             <div
-              class="w-[2.9rem] bg-white border border-[#0E7A81B3] rounded-full cursor-pointer"
+              class="w-[2rem] lg:w-[2.9rem] bg-white border border-[#0E7A81B3] rounded-full cursor-pointer"
             >
-              <i class="fa-regular fa-user text-[#131313B3] text-[1.2rem]"></i>
+              <i
+                class="fa-regular fa-user text-[#131313B3] text-[1rem] lg:text-[1.2rem]"
+              ></i>
             </div>
           </div>
         </div>
