making banner section responsive for all devices

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <!-- sub-section:: navbar -->
       <nav class="navbar">
         <div
-          class="navbar-start justify-between lg:justify-start w-full md:w-9/12 lg:w-1/2"
+          class="navbar-start justify-between lg:justify-start w-full md:w-7/12 lg:w-1/2"
         >
           <div class="dropdown mr-5 md:mr-2.5 lg:mr-0">
             <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
@@ -121,18 +121,22 @@
           class="banner-description text-center flex flex-col justify-center items-center"
         >
           <p>
-            <span class="font-bold text-[#13131399] text-[1.24rem]">
+            <span
+              class="font-bold text-[#13131399] text-[1rem] lg:text-[1.24rem]"
+            >
               Bringing Families Together
             </span>
             <span>❤️‍🔥</span>
           </p>
           <h1
-            class="font-black text-[#131313] text-[3.7rem] leading-[4.5rem] mt-[1.2rem]"
+            class="font-black text-[#131313] text-[1.55rem] md:text-[2.5rem] lg:text-[3.7rem] leading-[2.25rem] md:leading-[3.25rem] lg:leading-[4.5rem] mt-3 md:mt-[1.2rem]"
           >
             Your Path to Adoption <br />
             Starts Here
           </h1>
-          <p class="text-base leading-[1.24rem] mt-[1.24rem] md:w-2/3 mx-auto">
+          <p
+            class="text-base leading-[1.24rem] mt-[1.24rem] lg:w-2/3 md:mx-auto text-justify md:text-center"
+          >
             Adopt a loving pet today! Our rescued cats and dogs are waiting for
             a forever home. Safe, healthy, and vaccinated—find your perfect
             companion and make a difference with pet adoption.
@@ -140,13 +144,13 @@
           <a
             href="#main_contianer"
             type="button"
-            class="btn bg-[#0E7A81] text-white mt-[1.65rem] font-bold text-[1.03rem]"
+            class="btn bg-[#0E7A81] text-white mt-[1.65rem] font-bold lg:text-[1.03rem]"
           >
             View More
           </a>
         </div>
         <figure
-          class="flex justify-center items-center w-[41.35rem] h-[23.2rem]"
+          class="flex justify-center items-center md:w-[35.5rem] md:h-[20rem] lg:w-[41.35rem] lg:h-[23.2rem]"
         >
           <img
             src="./asset/images/pet.webp"
