--- a/index.html
+++ b/index.html
@@ -162,7 +162,60 @@
     </header>
 
     <!-- section:: main  -->
-    <main id="main_contianer"></main>
+    <main id="main_contianer" class="w-4/5 mx-auto mt-[5.2rem]">
+      <!-- section:: adaptation -->
+      <section id="adaptation">
+        <div class="section-description">
+          <h2 class="text-center font-black text-[#131313] text-[2.1rem]">
+            Adopt Your Best Friend
+          </h2>
+          <p
+            class="text-base text-[#131313B3] leading-[1.34rem] mt-[1.24rem] md:w-2/3 md:mx-auto text-justify md:text-center"
+          >
+            Adopting a pet means gaining a loyal best friend for life. Our pets
+            are loving, healthy, and ready for a forever home. Whether you're
+            looking for playful energy or calm companionship, your perfect match
+            is waiting. Discover the joy, comfort, and unconditional love that
+            only a rescued pet can bring into your life.
+          </p>
+        </div>
+      </section>
+
+      <!-- section::categories -->
+      <section
+        id="categories"
+        class="mt-[2.5rem] grid grid-cols-2 lg:grid-cols-4 justify-center items-center gap-[1.24rem]"
+      >
+        <button
+          class="font-inter font-bold text-[#131313] text-[1.24rem] bg-white border border-[#0E7A8126] capitalize py-[1.24rem] rounded-md flex justify-center items-center gap-[0.825rem] hover:bg-[#0E7A811A] hover:border-[#0E7A81] transition-all duration-[2000ms] ease-in-out hover:rounded-full"
+          type="button"
+        >
+          <img src="./asset/images/logo.webp" alt="" />
+          <span>dogs</span>
+        </button>
+        <button
+          class="font-inter font-bold text-[#131313] text-[1.24rem] bg-white border border-[#0E7A8126] capitalize py-[1.24rem] rounded-md flex justify-center items-center gap-[0.825rem] hover:bg-[#0E7A811A] hover:border-[#0E7A81] transition-all duration-[2000ms] ease-in-out hover:rounded-full"
+          type="button"
+        >
+          <img src="./asset/images/logo.webp" alt="" />
+          <span>dogs</span>
+        </button>
+        <button
+          class="font-inter font-bold text-[#131313] text-[1.24rem] bg-white border border-[#0E7A8126] capitalize py-[1.24rem] rounded-md flex justify-center items-center gap-[0.825rem] hover:bg-[#0E7A811A] hover:border-[#0E7A81] transition-all duration-[2000ms] ease-in-out hover:rounded-full"
+          type="button"
+        >
+          <img src="./asset/images/logo.webp" alt="" />
+          <span>dogs</span>
+        </button>
+        <button
+          class="font-inter font-bold text-[#131313] text-[1.24rem] bg-white border border-[#0E7A8126] capitalize py-[1.24rem] rounded-md flex justify-center items-center gap-[0.825rem] hover:bg-[#0E7A811A] hover:border-[#0E7A81] transition-all duration-[2000ms] ease-in-out hover:rounded-full"
+          type="button"
+        >
+          <img src="./asset/images/logo.webp" alt="" />
+          <span>dogs</span>
+        </button>
+      </section>
+    </main>
 
     <!-- section:: footer  -->
     <footer></footer>
