adding sort section

--- a/index.html
+++ b/index.html
@@ -220,6 +220,22 @@
           <span>dogs</span>
         </button>
       </section>
+
+      <!-- section::sort -->
+      <section
+        id="sort"
+        class="mt-[1.65rem] flex flex-col md:flex-row gap-3 justify-center md:justify-between items-center"
+      >
+        <h4 class="font-black text-[#131313] text-[1.24rem]">
+          Best Deal For you
+        </h4>
+        <button
+          class="btn lg:btn-lg font-bold text-white text-[1.1rem] bg-[#0E7A81] border border-[#0E7A81] rounded-md"
+          type="button"
+        >
+          Sort by Price
+        </button>
+      </section>
     </main>
 
     <!-- section:: footer  -->
