adding footer section

--- a/index.html
+++ b/index.html
@@ -604,7 +604,130 @@
     </main>
 
     <!-- section:: footer  -->
-    <footer></footer>
+    <footer class="bg-[#131313] py-[5.2rem]">
+      <div class="w-4/5 mx-auto">
+        <div class="footer sm:footer-horizontal text-white">
+          <div>
+            <!-- brand name  -->
+            <h5 class="mb-[1.24rem]">
+              <a href="" class="inline-flex justify-center items-center gap-3">
+                <img
+                  src="./asset/images/logo.webp"
+                  alt="logo"
+                  class="w-[1.5rem] h-[1.24rem]"
+                />
+                <span class="font-black text-[1.65rem]">Peddy</span>
+              </a>
+            </h5>
+
+            <!-- brand information  -->
+            <div class="space-y-1.5">
+              <address class="text-base leading-[1.65rem]">
+                Location: av. Washington 165, NY CA 54003
+              </address>
+              <p class="text-base leading-[1.65rem]">Phone: +31 85 964 47 25</p>
+              <p class="text-base leading-[1.65rem]">
+                Email: info@yourdomain.com
+              </p>
+              <p class="text-base leading-[1.65rem]">
+                Openings hours: 9.00 AM - 5.00 PM
+              </p>
+            </div>
+
+            <!-- social icons  -->
+            <div
+              class="inline-flex justify-center items-center gap-[1.24rem] mt-[1.24rem]"
+            >
+              <a href="">
+                <img
+                  src="https://img.icons8.com/?size=96&id=118497&format=png"
+                  alt="facebook"
+                  class="w-[1.65rem] h-[1.65rem] object-cover"
+                />
+              </a>
+              <a href="">
+                <img
+                  src="https://img.icons8.com/?size=96&id=ClbD5JTFM7FA&format=png"
+                  alt="twitter"
+                  class="w-[1.65rem] h-[1.65rem] object-cover"
+                />
+              </a>
+              <a href="">
+                <img
+                  src="https://img.icons8.com/?size=96&id=19318&format=png"
+                  alt="youtube"
+                  class="w-[1.65rem] h-[1.65rem] object-cover"
+                />
+              </a>
+              <a href="">
+                <img
+                  src="https://img.icons8.com/?size=96&id=Xy10Jcu1L2Su&format=png"
+                  alt="instagram"
+                  class="w-[1.65rem] h-[1.65rem] object-cover"
+                />
+              </a>
+            </div>
+          </div>
+          <nav>
+            <h6
+              class="footer-title font-inter font-bold text-[1rem] opacity-100 mb-[1.65rem]"
+            >
+              Useful Links
+            </h6>
+            <a class="link link-hover text-[1rem] leading-[1.65rem]">Home</a>
+            <a class="link link-hover text-[1rem] leading-[1.65rem]"
+              >About Us</a
+            >
+            <a class="link link-hover text-[1rem] leading-[1.65rem]">Animals</a>
+            <a class="link link-hover text-[1rem] leading-[1.65rem]"
+              >Foundation</a
+            >
+            <a class="link link-hover text-[1rem] leading-[1.65rem]">Contact</a>
+          </nav>
+          <nav>
+            <h6
+              class="footer-title font-inter font-bold text-[1rem] opacity-100 mb-[1.65rem]"
+            >
+              Drop a Message
+            </h6>
+            <form action="">
+              <label class="input validator bg-[#131313] w-[12.4rem]">
+                <svg
+                  class="h-[1em] opacity-50"
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 24 24"
+                >
+                  <g
+                    stroke-linejoin="round"
+                    stroke-linecap="round"
+                    stroke-width="2.5"
+                    fill="none"
+                    stroke="currentColor"
+                  >
+                    <rect width="20" height="16" x="2" y="4" rx="2"></rect>
+                    <path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"></path>
+                  </g>
+                </svg>
+                <input
+                  type="email"
+                  placeholder="Enter your email"
+                  class="font-inter text-white text-[1rem] opacity-60 w-full"
+                />
+              </label>
+
+              <div class="mt-[1rem]">
+                <button
+                  class="btn font-bold text-[1.1rem] text-white bg-[#0E7A81] border border-[#0E7A81] w-[12.4rem]"
+                  type="submit"
+                >
+                  Subscribe
+                </button>
+              </div>
+            </form>
+          </nav>
+        </div>
+      </div>
+    </footer>
 
     <!-- font awesome cdn link  -->
     <script
