making footer section responsive for all devices

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
           Best Deal For you
         </h4>
         <button
-          class="btn lg:btn-lg font-bold text-white text-[1.1rem] bg-[#0E7A81] border border-[#0E7A81] rounded-md"
+          class="btn lg:btn-lg font-bold text-white text-[1rem] lg:text-[1.1rem] bg-[#0E7A81] border border-[#0E7A81] rounded-md"
           type="button"
         >
           Sort by Price
@@ -606,37 +606,42 @@
     <!-- section:: footer  -->
     <footer class="bg-[#131313] py-[5.2rem]">
       <div class="w-4/5 mx-auto">
-        <div class="footer sm:footer-horizontal text-white">
+        <div class="footer sm:footer-horizontal text-white gap-10">
           <div>
             <!-- brand name  -->
-            <h5 class="mb-[1.24rem]">
+            <h5 class="mb-[1rem] lg:mb-[1.24rem]">
               <a href="" class="inline-flex justify-center items-center gap-3">
                 <img
                   src="./asset/images/logo.webp"
                   alt="logo"
                   class="w-[1.5rem] h-[1.24rem]"
                 />
-                <span class="font-black text-[1.65rem]">Peddy</span>
+                <span
+                  class="font-black text-[1.15rem] md:text-[1.25rem] lg:text-[1.65rem]"
+                  >Peddy</span
+                >
               </a>
             </h5>
 
             <!-- brand information  -->
-            <div class="space-y-1.5">
-              <address class="text-base leading-[1.65rem]">
+            <div class="space-y-1 lg:space-y-1.5">
+              <address class="text-[0.825rem] lg:text-[1rem] leading-[1.65rem]">
                 Location: av. Washington 165, NY CA 54003
               </address>
-              <p class="text-base leading-[1.65rem]">Phone: +31 85 964 47 25</p>
-              <p class="text-base leading-[1.65rem]">
+              <p class="text-[0.825rem] lg:text-[1rem] leading-[1.65rem]">
+                Phone: +31 85 964 47 25
+              </p>
+              <p class="text-[0.825rem] lg:text-[1rem] leading-[1.65rem]">
                 Email: info@yourdomain.com
               </p>
-              <p class="text-base leading-[1.65rem]">
+              <p class="text-[0.825rem] lg:text-[1rem] leading-[1.65rem]">
                 Openings hours: 9.00 AM - 5.00 PM
               </p>
             </div>
 
             <!-- social icons  -->
             <div
-              class="inline-flex justify-center items-center gap-[1.24rem] mt-[1.24rem]"
+              class="inline-flex justify-center items-center gap-[1rem] lg:gap-[1.24rem] lg:mt-[1.24rem]"
             >
               <a href="">
                 <img
@@ -670,28 +675,39 @@
           </div>
           <nav>
             <h6
-              class="footer-title font-inter font-bold text-[1rem] opacity-100 mb-[1.65rem]"
+              class="footer-title font-inter font-bold text-[0.95rem] lg:text-[1rem] opacity-100 mb-[1rem] md:mb-[1.24rem] lg:mb-[1.65rem]"
             >
               Useful Links
             </h6>
-            <a class="link link-hover text-[1rem] leading-[1.65rem]">Home</a>
-            <a class="link link-hover text-[1rem] leading-[1.65rem]"
+            <a
+              class="link link-hover text-[0.825rem] lg:text-[1rem] leading-[1.24rem] lg:leading-[1.65rem]"
+              >Home</a
+            >
+            <a
+              class="link link-hover text-[0.825rem] lg:text-[1rem] leading-[1.24rem] lg:leading-[1.65rem]"
               >About Us</a
             >
-            <a class="link link-hover text-[1rem] leading-[1.65rem]">Animals</a>
-            <a class="link link-hover text-[1rem] leading-[1.65rem]"
+            <a
+              class="link link-hover text-[0.825rem] lg:text-[1rem] leading-[1.24rem] lg:leading-[1.65rem]"
+              >Animals</a
+            >
+            <a
+              class="link link-hover text-[0.825rem] lg:text-[1rem] leading-[1.24rem] lg:leading-[1.65rem]"
               >Foundation</a
             >
-            <a class="link link-hover text-[1rem] leading-[1.65rem]">Contact</a>
+            <a
+              class="link link-hover text-[0.825rem] lg:text-[1rem] leading-[1.24rem] lg:leading-[1.65rem]"
+              >Contact</a
+            >
           </nav>
           <nav>
             <h6
-              class="footer-title font-inter font-bold text-[1rem] opacity-100 mb-[1.65rem]"
+              class="footer-title font-inter font-bold text-[0.95rem] lg:text-[1rem] opacity-100 mb-[1rem] md:mb-[1.24rem] lg:mb-[1.65rem]"
             >
               Drop a Message
             </h6>
             <form action="">
-              <label class="input validator bg-[#131313] w-[12.4rem]">
+              <label class="input validator bg-[#131313] md:w-[12.4rem]">
                 <svg
                   class="h-[1em] opacity-50"
                   xmlns="http://www.w3.org/2000/svg"
@@ -711,13 +727,13 @@
                 <input
                   type="email"
                   placeholder="Enter your email"
-                  class="font-inter text-white text-[1rem] opacity-60 w-full"
+                  class="font-inter text-white text-[0.825rem] lg:text-[1rem] opacity-60 w-full"
                 />
               </label>
 
               <div class="mt-[1rem]">
                 <button
-                  class="btn font-bold text-[1.1rem] text-white bg-[#0E7A81] border border-[#0E7A81] w-[12.4rem]"
+                  class="btn font-bold text-[1rem] lg:text-[1.1rem] text-white bg-[#0E7A81] border border-[#0E7A81] w-full md:w-[12.4rem]"
                   type="submit"
                 >
                   Subscribe
