fixing some font issue and scroll smooth issue

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smooth" data-theme="light">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -59,13 +59,13 @@
               class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow"
             >
               <li>
-                <a href="" class="text-base text-[#131313]"> Home </a>
+                <a href="" class="text-[1rem] text-[#131313]"> Home </a>
               </li>
               <li>
-                <a href="" class="text-base text-[#131313]"> Shop </a>
+                <a href="" class="text-[1rem] text-[#131313]"> Shop </a>
               </li>
               <li>
-                <a href="" class="text-base text-[#131313]"> Contact </a>
+                <a href="" class="text-[1rem] text-[#131313]"> Contact </a>
               </li>
             </ul>
           </div>
@@ -87,13 +87,17 @@
         <div class="navbar-center hidden lg:flex">
           <ul class="menu menu-horizontal px-1 gap-[1.65rem]">
             <li>
-              <a href="" class="text-base 2xl:text-lg text-[#131313]"> Home </a>
+              <a href="" class="text-[1rem] 2xl:text-[1.125rem] text-[#131313]">
+                Home
+              </a>
             </li>
             <li>
-              <a href="" class="text-base 2xl:text-lg text-[#131313]"> Shop </a>
+              <a href="" class="text-[1rem] 2xl:text-[1.125rem] text-[#131313]">
+                Shop
+              </a>
             </li>
             <li>
-              <a href="" class="text-base 2xl:text-lg text-[#131313]">
+              <a href="" class="text-[1rem] 2xl:text-[1.125rem] text-[#131313]">
                 Contact
               </a>
             </li>
@@ -135,7 +139,7 @@
             Starts Here
           </h1>
           <p
-            class="text-base leading-[1.24rem] mt-[1.24rem] lg:w-2/3 md:mx-auto text-justify md:text-center"
+            class="text-[1rem] leading-[1.24rem] mt-[1.24rem] lg:w-2/3 md:mx-auto text-justify md:text-center"
           >
             Adopt a loving pet today! Our rescued cats and dogs are waiting for
             a forever home. Safe, healthy, and vaccinated—find your perfect
@@ -175,7 +179,7 @@
             Adopt Your Best Friend
           </h2>
           <p
-            class="text-base text-[#131313B3] leading-[1.34rem] mt-3 lg:mt-[1.24rem] lg:w-2/3 lg:mx-auto text-justify md:text-center"
+            class="text-[1rem] text-[#131313B3] leading-[1.34rem] mt-3 lg:mt-[1.24rem] lg:w-2/3 lg:mx-auto text-justify md:text-center"
           >
             Adopting a pet means gaining a loyal best friend for life. Our pets
             are loving, healthy, and ready for a forever home. Whether you're
